docs(articles,system-design-architecture,reference-dictionary): add JVM thread model vs Go goroutines article, add jvm-10 to jvm-13 takeaways, add goroutine and related reference terms, update index